--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint src"
+    "lint": "eslint src"
   },
   "dependencies": {
     "next": "14.2.3",
