--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "14.2.3",
@@ -24,6 +25,8 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "globals": "^15.4.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.2.5",
     "prettier": "3.3.1",
     "typescript": "^5",
     "typescript-eslint": "^7.12.0"
