--- a/package.json
+++ b/package.json
@@ -7,15 +7,21 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint src",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest"
   },
   "dependencies": {
+    "jest-environment-jsdom": "^29.7.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.24.7",
     "@eslint/js": "^9.4.0",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^16.0.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -26,6 +32,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "globals": "^15.4.0",
     "husky": "^8.0.0",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.5",
     "prettier": "3.3.1",
     "typescript": "^5",
