--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "globals": "^15.4.0",
     "husky": "^8.0.0",
     "jest": "^29.7.0",
+    "jest-styled-components": "^7.2.0",
     "lint-staged": "^15.2.5",
     "prettier": "3.3.1",
     "typescript": "^5",
