--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "eslint src",
     "prepare": "husky install",
-    "test": "jest"
+    "test": "jest",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "jest-environment-jsdom": "^29.7.0",
@@ -19,7 +21,16 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.24.7",
+    "@chromatic-com/storybook": "^1.5.0",
     "@eslint/js": "^9.4.0",
+    "@storybook/addon-essentials": "^8.1.6",
+    "@storybook/addon-interactions": "^8.1.6",
+    "@storybook/addon-links": "^8.1.6",
+    "@storybook/addon-onboarding": "^8.1.6",
+    "@storybook/blocks": "^8.1.6",
+    "@storybook/nextjs": "^8.1.6",
+    "@storybook/react": "^8.1.6",
+    "@storybook/test": "^8.1.6",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.12",
@@ -33,12 +44,14 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-storybook": "^0.8.0",
     "globals": "^15.4.0",
     "husky": "^8.0.0",
     "jest": "^29.7.0",
     "jest-styled-components": "^7.2.0",
     "lint-staged": "^15.2.5",
     "prettier": "3.3.1",
+    "storybook": "^8.1.6",
     "typescript": "^5",
     "typescript-eslint": "^7.12.0"
   }
